--- a/package.json
+++ b/package.json
@@ -2,15 +2,24 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "",
-  "main": "./js/main.js",
+  "main": "js/main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "bundle": "browserify ./js/main.js -o ./js/bundle.js",
+    "watchbundle": "watchify ./js/main.js --outfile ./js/bundle.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aparkinbotswana/Portfolio.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/aparkinbotswana/Portfolio/issues"
+  },
+  "homepage": "https://github.com/aparkinbotswana/Portfolio#readme",
   "dependencies": {
     "hexaflip": "^0.1.6",
     "oridomi": "^1.1.2"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+  }
 }
