--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "js/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "bundle": "browserify ./js/main.js -o ./js/bundle.js",
-    "watchbundle": "watchify ./js/main.js --outfile ./js/bundle.js"
+    "bundle": "browserify ./source/js/main.js -o ./build/js/bundle.js",
+    "watchbundle": "watchify ./source/js/main.js --outfile ./build/js/bundle.js",
+    "sass": "source/stylesheets/style.scss build/stylesheets/style.css",
+    "watchsass": "sass --watch source/stylesheets:build/stylesheets"
   },
   "repository": {
     "type": "git",
