fixed up css nesting and stuff

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "bundle": "browserify ./source/js/main.js -o ./build/js/bundle.js",
     "watchbundle": "watchify ./source/js/main.js --outfile ./build/js/bundle.js",
-    "sass": "source/stylesheets/style.scss build/stylesheets/style.css",
+    "sass": " sass source/stylesheets/style.scss build/stylesheets/style.css",
     "watchsass": "sass --watch source/stylesheets/style.scss:build/stylesheets/style.css"
   },
   "repository": {
