--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "js/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "bundle": "browserify ./source/js/main.js -o ./build/js/bundle.js",
+    "build": "npx babel ./source/js/main.js -o ./build/js/bundle.js",
     "watchbundle": "watchify ./source/js/main.js --outfile ./build/js/bundle.js",
     "sass": " sass source/stylesheets/style.scss build/stylesheets/style.css",
     "watchsass": "sass --watch source/stylesheets/style.scss:build/stylesheets/style.css"
@@ -21,7 +21,10 @@
   },
   "homepage": "https://github.com/aparkinbotswana/Portfolio#readme",
   "dependencies": {
-    "hexaflip": "^0.1.6",
-    "oridomi": "^1.1.2"
+    "babel-preset-env": "^1.7.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2"
   }
 }
