found some particle code that has heaps of functionality I need for my lines. Adapting it for my own use. slowly coming along

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "sass": " sass source/stylesheets/style.scss build/stylesheets/style.css",
     "watchsass": "sass --watch source/stylesheets/style.scss:build/stylesheets/style.css",
-    "build": "browserify source/js/main.js -t babelify --outfile build/js/bundle.js"
+    "build": "browserify source/js/main.js -t babelify --outfile build/js/bundle.js",
+    "watchbuild": "watchify source/js/main.js -t babelify --outfile build/js/bundle.js"
   },
   "repository": {
     "type": "git",
